Fixing count chart alignment issues.

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -268,7 +268,7 @@ body {
 		}
 	}
 	.effect-header {
-		padding-left: 45px;
+		padding-left: 15px;
 		float: left;
 	}
 	.panel-body {
@@ -488,15 +488,6 @@ h4.count {
 	color: #fff;
 	content: none;
 	float: left;
-	canvas {
-		position: absolute;
-		top: 0;
-		left: 50%;
-		transform: translateX(-50%);
-	}
-	span {
-		position: absolute;
-	}
 }
 
 .progress {
